--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <title>Todo App</title>
   </head>
   <body>
-    <form class="container">
+    <form action="/" method="post" class="container">
       <div>
         <label for="todo"> Please Enter what you want to do</label>
         <br />
-        <input type="text" />
+        <input type="text" name="todo" />
         <br />
-        <button type="button" class="btn btn-dark">Submit</button>
+        <button type="submit" class="btn btn-dark">Submit</button>
       </div>
     </form>
     <script
